# heart-ts-analysis

./: AGENTS.md  AGENTS_old.md  find_fs.py  pyproject.toml
data/: control(I.1).csv  control(I.1)_plot_data.csv  control(I.2).csv  control(I.2)_plot_data.csv  control(I.3).csv  control(I.3)_plot_data.csv  control(I.4).csv  control(I.4)_plot_data.csv  doxo(IV.1).csv  doxo(IV.1)_2.csv  doxo(IV.1)_2_plot_data.csv  doxo(IV.1)_plot_data.csv  doxo(IV.2).csv  doxo(IV.2)_plot_data.csv  doxo_re(IV.3).csv  doxo_re(IV.3)_plot_data.csv  doxo_re(IV.4).csv  doxo_re(IV.4)_plot_data.csv  empa(II.1).csv  empa(II.1)_plot_data.csv  empa(II.2).csv  empa(II.2)_plot_data.csv  empa(II.3).csv  empa(II.3)_plot_data.csv  empa_doxo(III.1).csv  empa_doxo(III.1)_plot_data.csv  empa_doxo(III.2).csv  empa_doxo(III.2)_plot_data.csv  empa_doxo(III.3).csv  empa_doxo(III.3)_plot_data.csv  preconditionare_empa_doxo(V.1).csv  preconditionare_empa_doxo(V.1)_plot_data.csv  preconditionare_empa_doxo(V.2).csv  preconditionare_empa_doxo(V.2)_plot_data.csv  preconditionare_empa_doxo(V.3).csv  preconditionare_empa_doxo(V.3)_plot_data.csv
data_old/: control(I.1).csv  control(I.2).csv  control(I.4).csv  doxo(IV.1).csv  doxo(IV.1)_2.csv  doxo(IV.2).csv  empa(II.2).csv  empa_doxo(III.3).csv
notebooks/: heart_midas_pipeline.ipynb
workspace/: GOAL.md
workspace/reports/: midas_heart_resp_analysis_report.md
